# RayWhisper2

./: .gitignore  .ruff.toml  BUILD_START_HERE.md  CONTRIBUTING.md  DISTRIBUTION_README.txt  IMPLEMENTATION_PLAN.md  LICENSE  QUICKSTART.md  README.md  UserRequirements.md  build_exe.py  build_exe_simple.bat  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.ps1  test_caps_lock.py
.augment/rules/: rules-python.md
.github/: CODEOWNERS
.pyinstaller-hooks/: hook-chromadb.py  hook-faster_whisper.py  hook-raywhisper.py  hook-scipy.py  hook-sentence_transformers.py  hook-sklearn.py  hook-transformers.py
config/: config.example.yaml  config.yaml
docs/: Awesome_NuGet_Packages_Documentation.md  Clean_Architecture_and_Code_Principles.md  Distributed_systems.md
docs2ingest/: Awesome_NuGet_Packages_Documentation.md  Clean_Architecture_and_Code_Principles.md  Distributed_systems.md  Domain_Driven_Design.md  RAG_Systems.md  rules-python.md  vertical-slicing.md
examples/: custom_whisper_model.md
src/raywhisper/: __init__.py  __main__.py
src/raywhisper/application/services/: rag_service.py
src/raywhisper/application/use_cases/: populate_embeddings.py  process_voice_input.py  transcribe_audio.py
src/raywhisper/config/: __init__.py  loader.py  settings.py
src/raywhisper/domain/: __init__.py
src/raywhisper/domain/entities/: document.py  embedding.py  transcription.py
src/raywhisper/domain/interfaces/: __init__.py  audio_recorder.py  keyboard_controller.py  output_simulator.py  transcriber.py  vector_store.py
src/raywhisper/domain/value_objects/: audio_data.py  context.py
src/raywhisper/infrastructure/: __init__.py
src/raywhisper/infrastructure/audio/: __init__.py  audio_feedback.py  sounddevice_recorder.py
src/raywhisper/infrastructure/embeddings/: __init__.py  document_parser.py  reranker.py
src/raywhisper/infrastructure/keyboard/: __init__.py  base_controller.py  factory.py  macos_controller.py  windows_controller.py
src/raywhisper/infrastructure/output/: __init__.py  keystroke_simulator.py
src/raywhisper/infrastructure/transcription/: __init__.py  whisper_transcriber.py
src/raywhisper/infrastructure/vector_db/: chroma_store.py
src/raywhisper/presentation/: __init__.py  app.py  cli.py
tests/: conftest.py
tests/integration/: test_basic_flow.py  test_rag_context_formatting.py
tests/unit/: test_config_loader.py
tests/unit/application/: test_rag_service.py  test_transcribe_audio.py
tests/unit/domain/: test_audio_data.py  test_document.py  test_transcription.py
tests/unit/infrastructure/: test_document_parser.py  test_keyboard_caps_lock.py  test_sounddevice_recorder.py
